--- a/login.html
+++ b/login.html
@@ -88,6 +88,8 @@
     <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 引入jq文件 -->
     <script src="/assets/lib/jquery.js"></script>
+    <!-- 引入baseAPI的js文件 -->
+    <script src="/assets/js/baseAPI.js"></script>
     <!-- 引入自己的js -->
     <script src="/assets/js/login.js"></script>
 </body>
